[gd_scene load_steps=7 format=3 uid="uid://uuv6r24lldwk"]

[ext_resource type="Script" path="res://src/fishing_lvl/end_screen.gd" id="1_yh6o0"]
[ext_resource type="Texture2D" uid="uid://bq8v13cudgyag" path="res://assets/Fish.png" id="2_mu537"]
[ext_resource type="FontFile" uid="uid://bdpbpkhnq8lny" path="res://assets/8-bit-pusab.ttf" id="2_rwnjd"]
[ext_resource type="AudioStream" uid="uid://bp6tmlgjw4sko" path="res://assets/audio/wilhelm_scream.mp3" id="3_vbjhr"]

[sub_resource type="LabelSettings" id="LabelSettings_1pnuh"]
font = ExtResource("2_rwnjd")
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_0ciq0"]
font = ExtResource("2_rwnjd")
font_size = 32

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yh6o0")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.776471, 0.776471, 0.776471, 0.72549)

[node name="EndScreenElements" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -33.0
offset_right = 44.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="EndScreenElements"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Container" type="CenterContainer" parent="EndScreenElements/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FishCaughtSprite" type="Sprite2D" parent="EndScreenElements/VBox/Container"]
position = Vector2(0, -61)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_mu537")

[node name="Outcome" type="Label" parent="EndScreenElements/VBox"]
texture_filter = 1
layout_mode = 2
text = "You [] the fish!"
label_settings = SubResource("LabelSettings_1pnuh")
horizontal_alignment = 1

[node name="TreasureCollected" type="Label" parent="EndScreenElements/VBox"]
texture_filter = 1
layout_mode = 2
label_settings = SubResource("LabelSettings_0ciq0")
horizontal_alignment = 1

[node name="Keep fishing" type="Button" parent="EndScreenElements/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_rwnjd")
theme_override_font_sizes/font_size = 24
text = "Keep fishing"

[node name="Exit" type="Button" parent="EndScreenElements/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_rwnjd")
theme_override_font_sizes/font_size = 24
text = "Exit"

[node name="WilhelmScream" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vbjhr")
volume_db = -5.0

[connection signal="pressed" from="EndScreenElements/VBox/Keep fishing" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="EndScreenElements/VBox/Exit" to="." method="_on_exit_pressed"]
